@startuml
'https://plantuml.com/class-diagram

hide circle

class ArticleScraper {
    outputDirectoryPath : String
    +scrapeArticle(url: String, outputDirectoryPath: String): void
}

class NewsOnTheGo {
    articleScraper : ArticleScraper
    storageURL : StorageURL
    +run(): void
}

class StorageURL {
    +getURLs(): List<String>
}

NewsOnTheGo o-- ArticleScraper
NewsOnTheGo o-- StorageURL

@enduml
